Refactor integration test: simplify and modernize
- Reduce code from 362 to 273 lines (-25%)
- Use Java 17+ features: Records, Text Blocks, formatted()
- Apply DRY principle: Extract requestToken() helper method
- Add test ordering with @Order and @DisplayName annotations
- Improve type safety with TokenResponse record
- Use functional programming: Stream API for output
- Enhance readability: Clear section separators, better naming
- Better error messages with formatted strings
- Add TEST_IMPROVEMENTS.md documentation

All tests still passing (4/4 in ~19 seconds)